[package]
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
name = "gafi-service"
repository = "https://github.com/grindytech/cumulus/"
version = "0.1.0"

[dependencies]
clap = {version = "3.1", features = ["derive"]}
codec = {package = "parity-scale-codec", version = "3.0.0"}
derive_more = "0.99.2"
futures = '0.3'
hex-literal = "0.3.4"
jsonrpc-core = "18.0.0"
jsonrpsee = {version = "0.14.0", features = ["server"]}
log = "0.4.16"
serde = {version = "1.0.132", features = ["derive"]}

# Frontier
fc-consensus = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-db = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-mapping-sync = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-rpc = { workspace = true}
fc-rpc-core = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-consensus = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-evm = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37", default-features = false}
fp-rpc = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-storage = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
pallet-ethereum = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
pallet-evm = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}

# Substrate
frame-benchmarking = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-chain-spec = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-client-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-executor = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-network = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-network-common = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-rpc-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-service = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-telemetry = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-tracing = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-blockchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-inherents = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-offchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-runtime = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-session = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-timestamp = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-sysinfo = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
substrate-prometheus-endpoint = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
try-runtime-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

# Polkadot
polkadot-cli = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
xcm = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37"}

# Cumulus
cumulus-client-cli = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-collator = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-consensus-common = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-consensus-relay-chain = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-network = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-service = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-relay-chain-inprocess-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-relay-chain-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-relay-chain-rpc-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}

# Runtime
gari-runtime = {path = "../../runtime/gari", optional = true}

# Local
gafi-primitives = {path = "../../primitives", default-features = false}
gafi-rpc = {path = "../rpc", default-features = false}

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

[features]
default = [
  # "with-gari",
  "rococo-native",
]
std = []

runtime-benchmarks = [
  "polkadot-cli/runtime-benchmarks",
  "gari-runtime/runtime-benchmarks",
  "pallet-ethereum/runtime-benchmarks",
  "frame-benchmarking-cli",
]

with-gari = [
  "gari-runtime",
]

rococo-native = [
  "polkadot-cli/rococo-native",
  "polkadot-service/rococo-native",
]

fast-runtime = [
  "gari-runtime/fast-runtime",
]
