[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "proof-address-mapping"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
hex-literal = {version = "0.3.4", optional = true}
scale-info = {version = "2.1.0", default-features = false, features = ["derive"]}

# Frontier
pallet-evm = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}

# Substrate
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-io = {default-features = false, version = "6.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-runtime = {version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-std = {version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}

pallet-balances = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}

# Local
gu-convertor = {default-features = false, version = "4.0.0-dev", path = "../../utils/convertor"}
gu-currency = {default-features = false, version = "4.0.0-dev", path = "../../utils/currency"}
gu-ethereum = {default-features = false, version = "4.0.0-dev", path = "../../utils/ethereum"}

[dev-dependencies]
hex-literal = "0.2.1"
pallet-timestamp = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
parity-secp256k1 = {default-features = false, version = "0.7.0", git = "https://github.com/paritytech/rust-secp256k1"}
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-io = {default-features = false, version = "6.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
pallet-ethereum = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}

gu-mock = { path = "../../utils/mock" }

[features]
default = ["std"]
std = [
  'codec/std',
  'sp-io/std',
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'pallet-ethereum/std',
  'gu-ethereum/std',
  'gu-convertor/std',
  'gu-currency/std',
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "hex-literal"]
try-runtime = ["frame-support/try-runtime"]
