[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "proof-address-mapping"
publish = false
repository = {workspace = true}
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"]}
hex-literal = {version = "0.3.4", optional = true}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}

# Frontier
pallet-evm = {workspace = true}

# Substrate
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
sp-core = {workspace = true}
sp-io = {workspace = true, default-features = false}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

pallet-balances = {workspace = true}

# Local
gu-convertor = {default-features = false, version = "4.0.0-dev", path = "../../utils/convertor"}
gu-currency = {default-features = false, version = "4.0.0-dev", path = "../../utils/currency"}
gu-ethereum = {default-features = false, version = "4.0.0-dev", path = "../../utils/ethereum"}

[dev-dependencies]
hex-literal = "0.2.1"
pallet-timestamp = {workspace = true}
parity-secp256k1 = {default-features = false, version = "0.7.0", git = "https://github.com/paritytech/rust-secp256k1"}
sp-core = {workspace = true}
sp-io = {workspace = true, default-features = false}
sp-runtime = {workspace = true}
pallet-ethereum = {workspace = true}

gu-mock = { path = "../../utils/mock" }

[features]
default = ["std"]
std = [
  'codec/std',
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'pallet-ethereum/std',
  'gu-ethereum/std',
  'gu-convertor/std',
  'gu-currency/std',
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "hex-literal"]
try-runtime = ["frame-support/try-runtime"]
