[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "funding-pool"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.1.0", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.119" }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = {workspace = true }
sp-io = {workspace = true }
sp-runtime = {workspace = true }
sp-std = {workspace = true }

# Local
gafi-primitives = { default-features = false, version = "4.0.0-dev", path = "../../primitives" }
gu-convertor = { default-features = false, version = "4.0.0-dev", path = "../../utils/convertor" }
gu-currency = { default-features = false, version = "4.0.0-dev", path = "../../utils/currency" }

[dev-dependencies]
pallet-timestamp = { workspace = true }
sp-core = {workspace = true }
sp-io = {workspace = true }
sp-runtime = {workspace = true }
pallet-pool-names = { default-features = false, version = "4.0.0-dev", path = "../pool-names" }
pallet-randomness-collective-flip = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "gafi-primitives/std",
  # "pallet-randomness-collective-flip/std",
  "sp-io/std",
  "sp-core/std",
  "pallet-balances/std",
  "sp-std/std",
  'sp-runtime/std',
  "pallet-timestamp/std",
  "gu-convertor/std",
  "gu-currency/std",
]

runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "gafi-primitives/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
