[package]
name = "gafi-membership"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
frame-support = { workspace = true}
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-std = { workspace = true }

# Local
gafi-support = { version = "4.0.0-dev", default-features = false, path = "../../support" }

[dev-dependencies]
sp-core = {workspace = true }
sp-io = {workspace = true }
sp-runtime = {workspace = true }
pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
pallet-randomness-collective-flip = { workspace = true }
pallet-player = { default-features = false, version = "4.0.0-dev", path = "../player" }
upfront-pool = { default-features = false, version = "4.0.0-dev", path = "../upfront-pool" }
gu-mock = { default-features = false, version = "4.0.0-dev", path = "../../utils/mock" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"upfront-pool/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-runtime/std",
	"gafi-support/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
