[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "gafi-tx"
publish = false
repository = "https://github.com/cryptoviet/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}

# Frontier
fp-self-contained = {default-features = false, git = "https://github.com/cryptoviet/frontier", branch = "gafi-polkadot-v0.9.21"}
hex-literal = {version = "0.3.4", optional = true}
pallet-ethereum = {default-features = false, git = "https://github.com/cryptoviet/frontier", branch = "gafi-polkadot-v0.9.21"}
pallet-evm = {default-features = false, git = "https://github.com/cryptoviet/frontier", branch = "gafi-polkadot-v0.9.21"}

# Substrate
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
scale-info = {version = "2.1.0", default-features = false, features = ["derive"]}
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
sp-io = {default-features = false, version = "6.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
sp-runtime = {version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
sp-std = {version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}

pallet-balances = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
pallet-transaction-payment = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}

# Local
gafi-primitives = {default-features = false, version = "4.0.0-dev", path = "../../primitives"}
utils = {default-features = false, version = "4.0.0-dev", path = "../../utils"}

[dev-dependencies]
hex-literal = "0.2.1"

# Substrate
pallet-timestamp = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
parity-secp256k1 = {default-features = false, version = "0.7.0", git = "https://github.com/cryptoviet/rust-secp256k1"}
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
sp-io = {default-features = false, version = "6.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}
sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.21"}

# Local
game-creator = {default-features = false, version = "4.0.0-dev", path = "../game-creator"}
proof-address-mapping = {default-features = false, version = "4.0.0-dev", path = "../address-mapping"}
staking-pool = {default-features = false, version = "4.0.0-dev", path = "../staking-pool"}
upfront-pool = {default-features = false, version = "4.0.0-dev", path = "../upfront-pool"}

[features]
default = ["std"]
std = [
  'codec/std',
  'sp-io/std',
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'pallet-ethereum/std',
  'fp-self-contained/std',
  'pallet-transaction-payment/std',
  'gafi-primitives/std',
  'utils/std',
  'game-creator/std',
  'proof-address-mapping/std',
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "hex-literal"]
try-runtime = ["frame-support/try-runtime"]
